--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p>Don't Be Worry Your Project Is Going To Be Completly Perfect Because Our Amazing Team</p>
             </div>
             <div class="img text-c">
-                <img src="./imgs/hero-img.svg" alt="">
+                <img src="/imgs/hero-img.svg" alt="">
             </div>
         </div>
     </section>
