--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, a!</p>
             </div>
             <div class="box">
-                <img src="https://elzero.onrender.com./imgs/avatar-03.png" alt="">
+                <img src="https://elzero.onrender.com/imgs/avatar-03.png" alt="">
                 <h3>Shady Nabil</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, a!</p>
             </div>
@@ -150,12 +150,12 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, a!</p>
             </div>
             <div class="box">
-                <img src="https://elzero.onrender.com./imgs/avatar-06.png" alt="">
+                <img src="https://elzero.onrender.com/imgs/avatar-06.png" alt="">
                 <h3>Amr Hendawy</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, a!</p>
             </div>
             <div class="box">
-                <img src="https://elzero.onrender.com./imgs/avatar-04.png" alt="">
+                <img src="https://elzero.onrender.com/imgs/avatar-04.png" alt="">
                 <h3>Osama Ahmed</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, a!</p>
             </div>
