--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
                 <img src="./imgs/contact-img.svg" alt="">
             </div>
             <form action="https://formsubmit.co/zeyadsalah686@gmail.com" class="flex fd-c jc-c" method="POST">
-                <input type="text" name="username" placeholder="Enter Your User Name">
-                <input type="email" name="email" placeholder="Enter Your Email">
+                <input required type="text" name="username" placeholder="Enter Your User Name">
+                <input required type="email" name="email" placeholder="Enter Your Email">
                 <input type="number" name="phone" placeholder="Enter Your Phone Number">
-                <textarea name="message" cols="20" rows="10" placeholder="Write Your Message"></textarea>
+                <textarea required name="message" cols="20" rows="10" placeholder="Write Your Message"></textarea>
                 <button type="submit">Send</button>
             </form>
         </div>
