--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae accusamus natus nulla voluptates
                     ad debitis molestiae, facilis, qui labore eum architecto velit libero autem quidem!</p>
                 <div class="social flex jc-s ai-c">
-                    <i class="fab fa-twitter twitter"></i>
-                    <i class="fab fa-youtube youtube"></i>
-                    <i class="fab fa-linkedin linkedin"></i>
+                        <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter twitter"></i></a>
+                        <a href="http://youtube.com/" target="_blank"><i class="fab fa-youtube youtube"></i></a>
+                        <a href="https://linkedin.com/" target="_blank"><i class="fab fa-linkedin linkedin"></i></a>
                 </div>
             </div>
             <div class="img">
@@ -186,10 +186,10 @@
                 Fylo
             </h2>
             <div class="social flex jc-s ai-c">
-                <i class="fab fa-twitter twitter"></i>
-                <i class="fab fa-youtube youtube"></i>
-                <i class="fab fa-linkedin linkedin"></i>
-                <i class="fa-brands fa-whatsapp whatsapp"></i>
+                    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter twitter"></i></a>
+                    <a href="http://youtube.com/" target="_blank"><i class="fab fa-youtube youtube"></i></a>
+                    <a href="https://linkedin.com/" target="_blank"><i class="fab fa-linkedin linkedin"></i></a>
+                    <a href="https://whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp whatsapp"></i></a>
             </div>
         </div>
         <p class="copyright-text">Copyright &copy; 2024 All Rights Reserved by Ziad</p>
